[package]
name = "rollupfees"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-rusqlite = "0.7.0"
bitcoind-async-client = "0.3.0"
tokio = "1.47.1"
anyhow = "1.0.98"
hex = "0.4"
bitcoin = { version = "0.32.5", features = ["serde"] }
reqwest = "0.12.22"
image = "0.25.6"
webp = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8.8"
tracing-subscriber = "0.3.22"
tracing = "0.1.44"
tower-http = { version = "0.6.8", features = ["fs"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
serde_json = "1.0"
